Add match simulation feature and squad/player DTOs